# CoolTop

./: .gitignore  CMakeLists.txt  README.md
CoolTop/: Makefile  coltop-tools.c  coltop-tools.h  cooltop-common.h  cooltop-tools.c  cooltop-tools.h  dynamic-system-data.c  dynamic-system-data.h  main.c  static-system-data.c  static-system-data.h
Nuklear-samplecode/: Makefile  about-box.c  about-box.h  calculator.c  common.h  main.c  node_editor.c  nuke_sample.c  nuke_sample.h  overview.c  style.c
ctoplib/include/: linux-tools.h  netbsd-tools.h  static-data.h
ctoplib/src/: static-data.c
include/: common.h  environment.h  nuke-tools.h
lib/include/: common.h  environment.h  local-nuklear.h  nuke-tools.h  window_element.h  windows_list.h
lib/src/: environment.c  local-nuklear.c  nuklear_glfw_gl3.c  window_element.c  windows_list.c
mk/: glfw3.mk  libcommon.mk
nklib/include/: window_element.h
nklib/src/: environment.c  local-nuklear.c
src/: environment.c  nuke-tools.c
test-ctop/: test-ctop.c
texts/: NetBSD-Nuklear-port.md  NetBSD-port.md  texts.css
